--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "area-data": "^5.0.6",
     "axios": "^0.18.0",
     "element-ui": "^2.4.8",
     "qs": "^6.5.2",
     "vant": "^1.3.9",
     "vue": "^2.5.2",
+    "vue-area-linkage": "^5.0.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
