--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.5.2",
     "vant": "^1.3.9",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.8",
     "vue-area-linkage": "^5.0.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-piczoom": "^1.0.6",
