--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-amap": "^0.5.8",
     "vue-area-linkage": "^5.0.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-baidu-map": "^0.21.13",
     "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
