--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "area-data": "^5.0.6",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.8",
     "qs": "^6.5.2",
     "vant": "^1.3.9",
